Added support for OPTION BASE statement.